# VCD_project

./: CMakeLists.txt  README.md
include/: CameraInput.hpp  FrameBuffer.hpp  VirtualCamera.hpp  common.hpp
src/: CameraInput.cpp  FrameBuffer.cpp  VirtualCamera.cpp  main.cpp
